# RISCV-assembler

./: .gitignore  CMakeLists.txt  README.md  assembler  assembler.h  defs.h  helper_funcs.h  main.cpp  makefile  parser.h
assembly_files/: SingleCycleCpuTest.asm  SingleCycleCpuTest.txt  testprog0.asm  testprog0.txt  testprog1.asm  testprog1.txt  testprog2.asm  testprog2.txt  testprog3.asm  testprog3.txt
include/: assembler.h  lex.h  utils.h
src/: main.cpp
